# ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scene/: scene1.json  scene2.json
src/: cli.cpp  geometry.hpp  gui.cpp  main.cpp  raytracer.hpp  test_scene.hpp
